add generated code from stm32cube

--- a/Software/ssmc.ioc
+++ b/Software/ssmc.ioc
@@ -67,8 +67,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=SSMS.ioc
-ProjectManager.ProjectName=SSMS
+ProjectManager.ProjectFileName=ssmc.ioc
+ProjectManager.ProjectName=ssmc
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
