--- a/Software/mc/src/SSMC.ioc
+++ b/Software/mc/src/SSMC.ioc
@@ -6,22 +6,25 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=USART1
+Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=VP_SYS_VS_ND
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin2=PA15
-Mcu.Pin3=PB3
-Mcu.Pin4=PB4
-Mcu.Pin5=PB5
-Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
-Mcu.PinsNb=12
+Mcu.Pin10=PB8
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_ND
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin2=PA9
+Mcu.Pin3=PA10
+Mcu.Pin4=PA15
+Mcu.Pin5=PB3
+Mcu.Pin6=PB4
+Mcu.Pin7=PB5
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -37,9 +40,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB4.Locked=true
@@ -115,6 +123,9 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+USART1.IPParameters=VirtualMode,Mode
+USART1.Mode=MODE_TX
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
