--- a/Software/mc/src/SSMC.ioc
+++ b/Software/mc/src/SSMC.ioc
@@ -6,25 +6,33 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP3=TIM2
+Mcu.IP4=TIM3
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB8
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_SYS_VS_ND
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=PA15
-Mcu.Pin5=PB3
-Mcu.Pin6=PB4
-Mcu.Pin7=PB5
-Mcu.Pin8=PB6
-Mcu.Pin9=PB7
-Mcu.PinsNb=14
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_SYS_VS_ND
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA15
+Mcu.Pin9=PB3
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -46,8 +54,12 @@ PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA2.Signal=S_TIM2_CH3
+PA3.Signal=S_TIM2_CH4
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.Signal=S_TIM3_CH3
+PB1.Signal=S_TIM3_CH4
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB4.Locked=true
@@ -123,6 +135,24 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH3.0=TIM2_CH3,Input_Capture3_from_TI3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
+SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,Input_Capture4_from_TI4
+SH.S_TIM3_CH4.ConfNb=1
+TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-Input_Capture4_from_TI4,Channel-Input_Capture3_from_TI3,Prescaler,Period
+TIM2.Period=0xFFFF
+TIM2.Prescaler=71
+TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period
+TIM3.Period=0xFFFF
+TIM3.Prescaler=71
 USART1.IPParameters=VirtualMode,Mode
 USART1.Mode=MODE_TX
 USART1.VirtualMode=VM_ASYNC
@@ -130,5 +160,9 @@ VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
