--- a/Software/mc/src/SSMC.ioc
+++ b/Software/mc/src/SSMC.ioc
@@ -12,27 +12,25 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB4
-Mcu.Pin11=PB5
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_SYS_VS_ND
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA15
-Mcu.Pin9=PB3
-Mcu.PinsNb=20
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=PB8
+Mcu.Pin13=PB9
+Mcu.Pin14=VP_SYS_VS_ND
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PB0
+Mcu.Pin3=PB1
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA15
+Mcu.Pin7=PB3
+Mcu.Pin8=PB4
+Mcu.Pin9=PB5
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -82,10 +80,6 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -114,27 +108,26 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
-RCC.ADCFreqValue=36000000
-RCC.AHBFreq_Value=72000000
+RCC.ADCFreqValue=24000000
+RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
+RCC.APB1Freq_Value=24000000
+RCC.APB1TimFreq_Value=48000000
+RCC.APB2Freq_Value=48000000
+RCC.APB2TimFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
-RCC.PLLMCOFreq_Value=36000000
-RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.SYSCLKFreq_VALUE=72000000
+RCC.HCLKFreq_Value=48000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=48000000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMCOFreq_Value=24000000
+RCC.PLLMUL=RCC_PLL_MUL12
+RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=72000000
-RCC.VCOOutput2Freq_Value=8000000
+RCC.TimSysFreq_Value=48000000
+RCC.USBFreq_Value=48000000
+RCC.VCOOutput2Freq_Value=4000000
 SH.S_TIM2_CH3.0=TIM2_CH3,Input_Capture3_from_TI3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
@@ -147,12 +140,12 @@ TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-Input_Capture4_from_TI4,Channel-Input_Capture3_from_TI3,Prescaler,Period
 TIM2.Period=0xFFFF
-TIM2.Prescaler=71
+TIM2.Prescaler=47
 TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period
 TIM3.Period=0xFFFF
-TIM3.Prescaler=71
+TIM3.Prescaler=47
 USART1.IPParameters=VirtualMode,Mode
 USART1.Mode=MODE_TX
 USART1.VirtualMode=VM_ASYNC
